--- a/apps/manager/app/app.css
+++ b/apps/manager/app/app.css
@@ -1,5 +1,5 @@
 @import 'tailwindcss' source('../app');
-@import "tw-animate-css";
+@import 'tw-animate-css';
 
 @custom-variant dark (&:is(.dark *));
 
